<resources>
    <string name="app_name">YoTeAyudo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_oficinas">Nuestras oficinas</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_username">Nombre y apellido</string>

    <string name="menu_perfil">Perfil de Usuario</string>
    <string name="menu_buscarcomparar">Buscar y comparar</string>
    <string name="menu_producto_detalle">producto detaller</string>
    <string name="menu_comparar">Comparar Precios</string>
    <string name="menu_cupon">Generar cupón</string>
    <string name="menu_favoritos">Lista de favoritos</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_detalletienda">Detalle de Tienda</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>